# mxl-clap

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
data/: README.md
data/processed/: README.md
data/raw/excerpts/: README.md
notebooks/: 01_tiny_similarity_demo.ipynb
reports/: README.md  mozart_chopin_clap_interpretation.md  mozart_chopin_clap_llm_prompt_table.md  mozart_chopin_next_steps.md  mozart_chopin_symbolic_feature_upgrade_report.md  symbolic_feature_audit.csv  symbolic_feature_audit.md
research_lanes/musicological_features/: README.md
research_lanes/roman_numeral_harmony/: README.md
scripts/: audit_symbolic_features.py  compare_excerpts.py  compute_embeddings.py  extract_excerpts.py  extract_prefix_excerpts.py  extract_symbolic_features.py  make_llm_prompt_table.py  render_audio.py
src/: yaml.py
src/score_embedding_lab/: __init__.py  audio_rendering.py  clap_embeddings.py  config.py  embedding_alignment.py  excerpting.py  experimental_feature_evaluation.py  experimental_musicological.py  experimental_roman_harmony.py  feature_audit.py  feature_pipeline.py  feature_registry.py  io.py  llm_explanations.py  roman_numeral_backend.py  similarity.py  symbolic_features.py
tests/: test_audio_rendering.py  test_embedding_alignment.py  test_excerpting.py  test_experimental_feature_metadata.py  test_experimental_musicological.py  test_feature_audit.py  test_roman_numeral_harmony.py  test_roman_numeral_metadata.py  test_similarity.py  test_symbolic_features.py
(+257 files in other folders)
